components/default/bytestash/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bytestash
  labels:
    app.kubernetes.io/instance: bytestash
    app.kubernetes.io/name: bytestash
  annotations:
    gethomepage.dev/href: "https://bytestash.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/bytestash.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["bytestash.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: bytestash
          port: http
